--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "server/index.js",
   "private": true,
   "proxy": "http://localhost:3001",
+  "engines": {
+    "node": "10.15.2",
+    "yarn": "1.13.0"
+  },
   "dependencies": {
     "autoprefixer": "7.1.6",
     "axios": "^0.17.1",
@@ -50,7 +54,6 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
-    "query-string": "^6.3.0",
     "raf": "3.4.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
