--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.7.2",
     "raf": "3.4.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
@@ -62,6 +63,7 @@
     "react-dropzone": "^6.0.4",
     "react-places-autocomplete": "^7.2.0",
     "react-redux": "^5.0.7",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
